syntax = "proto3";

package postservice;

import "google/protobuf/timestamp.proto";

service PostService {
  rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
  rpc GetPost (GetPostRequest) returns (GetPostResponse);
  rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
}

message Post {
  int32 id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp createdAt = 4;
}

message CreatePostRequest {
  string title = 1;
  string content = 2;
}

message CreatePostResponse {
  Post post = 1;
}

message GetPostRequest {
  int32 id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {}

message ListPostsResponse {
  repeated Post posts = 1;
}
